// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component tests Test Menu output (snapshot) 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    theme="dark"
  >
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Menu component tests Test MenuBar output (snapshot) 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    theme="dark"
  >
    <div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container menubar"
        style="flex-direction: row; align-items: center;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container menuItem nohover submenu"
          id="fileMenu"
          style="flex-direction: row;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data-tooltip="expand"
          >
            File
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container menuItem nohover submenu"
          id="editMenu"
          style="flex-direction: row;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data-tooltip="expand"
          >
            Edit
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container menuItem nohover submenu"
          id="selectionMenu"
          style="flex-direction: row;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data-tooltip="expand"
          >
            Selection
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container menuItem nohover submenu"
          id="viewMenu"
          style="flex-direction: row;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data-tooltip="expand"
          >
            View
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container menuItem nohover submenu"
          id="goMenu"
          style="flex-direction: row;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data-tooltip="expand"
          >
            Go
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="msg container menubar"
      style="flex-direction: row; align-items: center;"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container menuItem nohover submenu"
        id="fileMenu"
        style="flex-direction: row;"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data-tooltip="expand"
        >
          File
        </label>
      </div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container menuItem nohover submenu"
        id="editMenu"
        style="flex-direction: row;"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data-tooltip="expand"
        >
          Edit
        </label>
      </div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container menuItem nohover submenu"
        id="selectionMenu"
        style="flex-direction: row;"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data-tooltip="expand"
        >
          Selection
        </label>
      </div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container menuItem nohover submenu"
        id="viewMenu"
        style="flex-direction: row;"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data-tooltip="expand"
        >
          View
        </label>
      </div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container menuItem nohover submenu"
        id="goMenu"
        style="flex-direction: row;"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data-tooltip="expand"
        >
          Go
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
